Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/unicode/SupplementaryJavaID4.out
SupplementaryJavaID4.java:14:9: compiler.err.illegal.char: \ud834\udd7b
1 error
